--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc",
     "prepare": "npm run build",
     "test": "jest",
+    "coverage-check": "jest --coverage",
     "lint": "eslint . --ext .ts,.js",
     "type-check": "tsc --noEmit"
   },
